--- a/Main/style.css
+++ b/Main/style.css
@@ -70,3 +70,12 @@ body {
     transition: all 0.3s ease-in-out;
   }
   
+  .bulletin {
+    display: none;
+    padding-bottom: 15px;
+    color: #000000;
+  }
+
+  .show {
+    display: block;
+  }
